create github pages

--- a/page27.html
+++ b/page27.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web page builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-9f" data-rv-view="398" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/c">free web page maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-9f" data-rv-view="398" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -93,7 +93,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 44%;">
-                  <div class="mbr-figure"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/HdXWXjldi38?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=HdXWXjldi38" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                  <div class="mbr-figure"><img src="assets/images/fixxface-1400x642.jpg"></div>
               </div>
 
             </div>
@@ -164,7 +164,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9g" data-rv-view="400" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9g" data-rv-view="400" style="background-color: rgb(184, 106, 123); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
