--- a/menu.html
+++ b/menu.html
@@ -33,7 +33,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">web page builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-18" data-rv-view="36" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-18" data-rv-view="36" style="background-color: rgb(255, 255, 255);">
 
         
 
@@ -118,7 +118,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1b" data-rv-view="41" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1b" data-rv-view="41" style="background-color: rgb(184, 106, 123); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
