--- a/page14.html
+++ b/page14.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5b" data-rv-view="214" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/d">web page software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5b" data-rv-view="214" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -223,7 +223,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="228" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="228" style="background-color: rgb(184, 106, 123); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
