--- a/page23.html
+++ b/page23.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">design a website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7q" data-rv-view="358" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/b">free web creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7q" data-rv-view="358" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -88,7 +88,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7p" data-rv-view="356" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7p" data-rv-view="356" style="background-color: rgb(184, 106, 123); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
