--- a/page24.html
+++ b/page24.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-80" data-rv-view="364">
+<section id="ext_menu-80" data-rv-view="3271">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -57,8 +57,28 @@
 
 </section>
 
+<section class="engine"><a href="https://mobirise.co/g">how to create a website for free</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-b6" data-rv-view="3275" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
-  <section class="engine"><a href="https://mobirise.co/b">free website creator</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p>&nbsp;</p><p><br></p><p><br></p><p><br></p><p><br></p><p>&nbsp; &nbsp;療程Q&amp;A</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content2-b5" data-rv-view="3273" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><blockquote>抗衰原理是什麼？</blockquote><blockquote>答：利用小分子膠原蛋白容易被面部細胞吸收和奈米金箔的消除自由基，抗氧化作用，既補充了膠原蛋白，同時還有極致修復多肽，抗衰祛皺的酵母修護精華，從根本上解決皮膚衰老和下垂的問題，重新煥發肌膚年輕狀態，提升面部輪廓，提拉下顎線，淡化皺紋，從而達到逆齡抗衰的效果。</blockquote><blockquote><br></blockquote><blockquote>特色功能是什麼？</blockquote><blockquote>答：原液安全又靈活，提升收緊衰老的皮膚，全面減緩肌膚衰老，令肌膚恢復並停留在平滑、緊實、光彩、勻淨、潤澤的年輕狀態，美白淡斑，淡化皺紋，從而達到美容抗衰老的神奇效果。</blockquote><blockquote><br></blockquote><blockquote>核心成分是什麼？</blockquote><blockquote>答：主要的功效成分有：納米金、高效修復多肽、蛇毒肽、生物糖膠、酵母修護精華等。</blockquote><blockquote>緊致除皺，刺激膠原蛋白、彈性蛋白活性，增加大量的皮下膠原纖維，將表皮、真皮與皮下組織加以固定，提升收緊衰老的皮膚，全面減緩肌膚衰老，令肌膚恢復並停留在平滑、緊實、光彩、勻淨、潤澤的年輕狀態。</blockquote><blockquote><p><br></p><p>專利？</p></blockquote><blockquote>答：極致修復復合多肽與奈米金技術。</blockquote><blockquote><br></blockquote><blockquote>產品出處哪兒？</blockquote><blockquote>瑞士引進專利技術與原材料，同時還有醫學檢驗中心的質檢報告。</blockquote><blockquote><br></blockquote><blockquote>Ｑ：我今年25歲有效果嗎？</blockquote><blockquote><p>Ａ：當然可以用的。25<span style="font-size: 1.07rem;">面部就已經開始衰老，越早使用越抗衰老。</span></p></blockquote><blockquote><br></blockquote><blockquote>Ｑ：敏感皮膚能用嗎？</blockquote><blockquote>Ａ：適用於所有人，但敏感皮膚只要不是在急性過敏期是可以用的。</blockquote><blockquote><br></blockquote><blockquote><p>Ｑ：衰老分為幾種類型？</p><p><br></p><p>Ａ：抗衰老分為四個階段，衰老初級階段&nbsp;20-25歲最好能預防衰老，衰老初級階段26-35歲需要延緩衰老，衰老高級第一階段35-45歲逆轉肌齡，衰老高級第二階段45歲以後需要對抗衰老：）</p></blockquote><blockquote><p>Ｑ：為什麼會出現皺紋？</p><p><br></p><p>Ａ：皺紋的產生直接原因是成纖維細胞的缺失斷裂，腦垂體的激素分泌也可以影響成纖維的生長。換言之就是與作息、心情、飲食、經期都有關係。定期做療程一定會有非常滿意的效果。</p></blockquote><blockquote><br></blockquote><blockquote>Ｑ：哪些人群是不能做療程的？</blockquote><blockquote><p>Ａ：</p><p><br></p><p>1、痘痘爆發期 </p><p>2、急性過敏期 &nbsp;</p><p>3、用過其他功效產品排毒期 &nbsp;</p><p>4、耳後敏感測試有敏感反應 &nbsp;</p><p>5、皮膚有破損 &nbsp;</p><p>6、做過光電項目、注射項目不足15天或雖超過15天皮膚有其他異常表現的。</p></blockquote><blockquote>Ｑ：產品有美白功效嗎？<br></blockquote><blockquote>Ａ：有的，產品里的九胜肽有美白淡斑的功效</blockquote><blockquote>&nbsp;</blockquote><blockquote><p>Ｑ：做完療程臉部會不會沒有什麼變化？</p><p>&nbsp; &nbsp; &nbsp; 多久效果會明顯？</p></blockquote><blockquote><p>Ａ：不同的階段會有不同的變化，大部分人當場就會感到自己皮膚變緊了，用手戳會覺得彈性增加。&nbsp;</p></blockquote><blockquote><p>Ｑ：一般見效療程是多少天？</p><p>&nbsp; &nbsp; &nbsp;</p></blockquote><blockquote><p>Ａ：當下做完立即見效</p><p>&nbsp; &nbsp; &nbsp; 建議7~10天做一次療程</p><p>&nbsp; &nbsp; （維持效果最佳）</p><p>&nbsp; &nbsp; &nbsp;</p><p>&nbsp; &nbsp; &nbsp; 使用時間長短不同效果不同。</p></blockquote><blockquote>Ｑ：可以改善毛孔粗大問題嗎？</blockquote><blockquote>Ａ：可以，當下療程後皮膚立即緊致，明顯縮小毛孔。</blockquote><blockquote><br></blockquote></div>
+        </div>
+    </div>
+
+</section>
+
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
