create github pages

--- a/page25.html
+++ b/page25.html
@@ -61,7 +61,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2"><p>《 休修臉 x ZUUTH 合作企劃 》</p></h3>
+                <h3 class="mbr-section-title display-2"><p>《 休修臉 合作企劃 》</p></h3>
                 <small class="mbr-section-subtitle">嚴選自然植萃 <br>法國Ecocert有機認證</small>
             </div>
         </div>
@@ -78,7 +78,7 @@
               
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-right content-size">
-                  <h3 class="mbr-section-title display-2">Zuuth如瓷保濕緊緻精華</h3>
+                  <h3 class="mbr-section-title display-2">保濕緊緻精華</h3>
                   <div class="lead">
 
                     <p>能為肌膚達到保濕、緊緻、控油,防禦等多效保養；在肌膚上能延展形成補水薄膜，感受由裡到外的水嫩感，為肌膚健康打底，皮膚感覺細緻好上妝，並賦予高能量的抗老修護，緊緻皮膚、全面賦活彈潤緊實，進一步創造完美年輕肌齡<br><br></p>
