create github pages

--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-5a" data-rv-view="121">
+<section id="ext_menu-5a" data-rv-view="1606">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free website creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="119" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="1604" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -68,7 +68,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="123" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="1608" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -79,17 +79,17 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="127" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="1612" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p><span style="font-size: 1.09rem; font-style: normal;"><strong>［ 預約須知 ］</strong></span></p></blockquote><blockquote><span style="font-style: normal;">休修臉一律採取預約制度，因為預約人數比較多，為了保障服務客人的權益，也顧及大家的完美品質，只好更動以下預約規則，如有不便之處敬請見諒。</span></blockquote><blockquote><p><span style="font-style: normal;"><strong>［新客人第一次預約］</strong></span></p></blockquote><blockquote><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間或提前內告知，若無告知，當日取消或沒回應沒來，將無法再約下一次預約。</span></blockquote><blockquote><span style="font-style: normal;">(新客無法做當天更改時間，若當日更改則算當日取消，若需更改時間，請在前一天營業時間內告知)</span></blockquote><blockquote><p><span style="font-style: normal;"><strong>［已來過本店儲值或包療程客人］</strong></span></p></blockquote><blockquote><p><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間內告知，若超過兩次以上（包含兩次）當日取消，休修臉有權拒絕服務您。</span></p><p><span style="font-style: normal;"><br></span></p></blockquote><blockquote><p><span style="font-style: normal;">當日預約超過15分鐘者，視為遲到</span></p><p><span style="font-style: normal;">（遲到只能選擇減少時間或無法為您服務）</span></p></blockquote><blockquote><span style="font-style: normal;">每次預約我們將為你保留10分鐘，如您未能在保留時間抵達，為了不影響下一位客人的權利與寶貴的時間，這邊有縮短或取消療程的權力。</span></blockquote><blockquote><span style="font-style: normal;">如因故必須取消或重新安排預約時間，請於預約日前一天私訊告知取消，如果未能符合將視為當日取消，如有不便之處敬請見諒。</span></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p><span style="font-size: 1.09rem; font-style: normal;"><strong>［ 預約須知 ］</strong></span></p></blockquote><blockquote><span style="font-style: normal;">休修臉一律採取預約制度，因為預約人數比較多，為了保障服務客人的權益，也顧及大家的完美品質，只好更動以下預約規則，如有不便之處敬請見諒。</span></blockquote><blockquote><p><span style="font-style: normal;"><strong>［新客人第一次預約］</strong></span></p></blockquote><blockquote><p><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間或提前內告知，若無告知，當日取消或沒回應沒來，將無法再約下一次預約。</span></p><p><span style="font-style: normal;"><br></span>(新客無法做當天更改時間，若當日更改則算當日取消，若需更改時間，請在前一天營業時間內告知)</p></blockquote><blockquote><p><span style="font-style: normal;"><strong>［已來過本店儲值或包療程客人］</strong></span></p></blockquote><blockquote><p><span style="font-style: normal;">若需取消或更改時間，請在前一天營業時間內告知，若超過兩次以上（包含兩次）當日取消，休修臉有權拒絕服務您。</span></p><p><span style="font-style: normal;"><br></span></p></blockquote><blockquote><p><span style="font-style: normal;">為了每個客人的權益 為了不影響下一位客人的權利與寶貴的時間</span></p><p><span style="color: rgb(226, 80, 65); font-size: 1.07rem; font-family: &quot;Roboto Condensed&quot;, sans-serif;">預約只保留10分鐘 預約時間超過 10分鐘未到者</span></p><p><span style="font-style: normal;">視同取消，並改約時間或這邊有縮短或取消療程的權力</span></p><p>（若遲到只能選擇減少時間或無法為您服務）</p></blockquote><blockquote><br></blockquote><blockquote><span style="font-style: normal;">如因故必須取消或重新安排預約時間，請於預約日前一天私訊告知取消，如果未能符合將視為當日取消，如有不便之處敬請見諒。</span></blockquote></div>
         </div>
     </div>
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="129" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="1614" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -99,7 +99,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="125" style="background-color: rgb(184, 106, 123); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="1610" style="background-color: rgb(184, 106, 123); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
