--- a/page21.html
+++ b/page21.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="menu.html" target="_blank" data-toggle="dropdown-submenu" aria-expanded="false">服務項目</a></li><li class="nav-item"><a class="nav-link link" href="https://line.me/R/ti/p/%40llr0044b" target="_blank">LINE ME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="menu.html" target="_blank" data-toggle="dropdown-submenu" aria-expanded="true">服務項目</a></li><li class="nav-item"><a class="nav-link link" href="https://line.me/R/ti/p/%40llr0044b" target="_blank">LINE ME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">free web maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7j" data-rv-view="367" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/d">web page software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7j" data-rv-view="367" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
