create github pages

--- a/page8.html
+++ b/page8.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="mbr-section" id="pricing-table2-1x" data-rv-view="162" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 120px;">
+<section class="mbr-section" id="pricing-table2-1x" data-rv-view="111" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 120px;">
 
     
 
@@ -91,7 +91,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/e">web page builder software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
