--- a/page18.html
+++ b/page18.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-64" data-rv-view="326">
+<section id="ext_menu-64" data-rv-view="275">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">free web software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="323" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap template</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="272" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
 
     
     <div class="container">
