--- a/page24.html
+++ b/page24.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-80" data-rv-view="420">
+<section id="ext_menu-80" data-rv-view="369">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-b6" data-rv-view="422" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/e">web page creation software</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-b6" data-rv-view="371" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -67,7 +67,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-b5" data-rv-view="424" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-b5" data-rv-view="373" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
