--- a/page32.html
+++ b/page32.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-<section id="ext_menu-bg" data-rv-view="45">
+<section id="ext_menu-bg" data-rv-view="510">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make your own website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-be" data-rv-view="41" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/j">how to design your own website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-be" data-rv-view="506" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -70,7 +70,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-bf" data-rv-view="43" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-bf" data-rv-view="508" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -81,7 +81,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery1-bi" data-rv-view="49" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery1-bi" data-rv-view="514" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     
 
@@ -199,7 +199,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-bk" data-rv-view="76" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-bk" data-rv-view="541" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -210,7 +210,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-bh" data-rv-view="47" style="background-color: rgb(34, 34, 34); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-bh" data-rv-view="512" style="background-color: rgb(34, 34, 34); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
