--- a/page35.html
+++ b/page35.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-by" data-rv-view="34">
+<section id="ext_menu-by" data-rv-view="550">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">website development software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-bz" data-rv-view="36" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/j">design your own website</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-bz" data-rv-view="552" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -91,7 +91,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-c0" data-rv-view="39" style="background-color: rgb(34, 34, 34); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-c0" data-rv-view="555" style="background-color: rgb(34, 34, 34); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
