--- a/page7.html
+++ b/page7.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="mbr-section" id="pricing-table2-1t" data-rv-view="155" style="padding-top: 40px; padding-bottom: 160px;">
+<section class="mbr-section" id="pricing-table2-1t" data-rv-view="104" style="padding-top: 40px; padding-bottom: 160px;">
 
     
 
@@ -69,7 +69,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">design your own website</a></section><section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="158" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="107" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -79,7 +79,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-8e" data-rv-view="160" style="background-color: rgb(34, 34, 34); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-8e" data-rv-view="109" style="background-color: rgb(34, 34, 34); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
