create github pages

--- a/page34.html
+++ b/page34.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -189,7 +189,7 @@
                         <h4 class="card-title">多醣體保溼/美白面膜<br></h4>
                         <h5 class="card-subtitle">售價$299元</h5>
                         <p class="card-text">---<br>活動買1送1</p>
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="page38.html" class="btn btn-primary" target="_blank">MORE</a></div>
                     </div>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                         <h4 class="card-title">lashthree black<br>睫毛修護增長液</h4>
                         <h5 class="card-subtitle">售價$1580元</h5>
                         <p class="card-text">---<br>活動優惠＄1500</p>
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="page37.html" class="btn btn-primary" target="_blank">MORE</a></div>
                     </div>
                 </div>
             </div>
