--- a/page34.html
+++ b/page34.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/e">web building software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -114,7 +114,7 @@
                     <h4 class="card-title">毛孔零負擔水感亮白隔離霜30g</h4>
                     <h5 class="card-subtitle">售價$999元</h5>
                     <p class="card-text">---<br>活動優惠七折＄749<br></p>
-                    <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                    <div class="card-btn"><a href="page36.html" class="btn btn-primary" target="_blank">MORE</a></div>
                     </div>
                 </div>
             </div>
