create github pages

--- a/page34.html
+++ b/page34.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web building software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/c">website maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -127,7 +127,7 @@
                         <h4 class="card-title">如瓷保濕緊緻精華原液</h4>
                         <h5 class="card-subtitle">售價$1688元</h5>
                         <p class="card-text">---<br>一盒原液+一盒爆水面膜 $1888 ⠀<br>套組限量15組售完不追加<br><br>購買三組套組<br>再贈送2片多醣體面膜<br></p>
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="page25.html" class="btn btn-primary" target="_blank">MORE</a></div>
                     </div>
                 </div>
             </div>
