create github pages

--- a/page34.html
+++ b/page34.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">website maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/e">web page design software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -140,7 +140,7 @@
                         <h4 class="card-title">潤澤修護膠囊20入</h4>
                         <h5 class="card-subtitle">售價$699元</h5>
                         <p class="card-text">---<br>活動優惠＄500<br></p>
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="page39.html" class="btn btn-primary" target="_blank">MORE</a></div>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                         <h4 class="card-title">爆水炸彈面膜五入<br></h4>
                         <h5 class="card-subtitle">售價$599元</h5>
                         <p class="card-text">---<br>獨家爆水炸彈面膜<br>原價單片$120<br>一盒五入優惠$449<br>（♡ 買五合贈一盒 ♡ ）<br></p>
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="page27.html" class="btn btn-primary" target="_blank">MORE</a></div>
                     </div>
                 </div>
             </div>
