create github pages

--- a/page34.html
+++ b/page34.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">how to build your own website for free</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/h">make your own website for free</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -215,7 +215,7 @@
                         <h4 class="card-title">薇姬娜私密潔淨慕斯</h4>
                         <h5 class="card-subtitle">售價$950元</h5>
                         <p class="card-text">---<br>單瓶九折＄855<br>兩瓶七折＄665</p>
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MTM3NzcyNjgyMDIwMzMw?igshid=ye06onaq6w8&story_media_id=2286085471721148868" class="btn btn-primary" target="_blank">MORE</a></div>
                     </div>
                 </div>
             </div>
